# BinanceTUI

./: .gitignore  CMakeLists.txt  README.md  config.yaml
include/: config.hpp  constants.hpp  http_client.hpp  manager.hpp  types.hpp  websocket.hpp
src/: main.cpp
